# pixel-magic

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Dockerfile  README.md  RESEARCH.md  STATE.md  docker-compose.yaml  pyproject.toml
.claude/plans/: 001-json-multiview-characters.md
.github/workflows/: ci.yml
docs/: BENCHMARK_REPORT_2026-03-04.md  cli.md  intro.md  mcp-installation.md  plan-grid-canvas.md  plan-multi-tile-platform.md  plan-platform-generation.md  process.md  sprite-generation-research.md
docs/architecture/: runtime.md
docs/configuration/: providers-and-env.md
docs/evaluation/: testing-and-judge.md
docs/getting-started/: installation.md  quickstart.md
docs/mcp/: setup.md  tool-reference.md
palettes/: default_16.hex  fantasy_rpg.hex  survival_earth.hex
prompts/: characters.yaml  effects.yaml  items.yaml  tilesets.yaml  ui.yaml
scripts/: check_mcp_docs_coverage.py  diagnose_pipeline.py  generate_game_demo.py  review_cohesion.py  test_character_gen.py
tests/: test_background.py  test_character_sheet_e2e.py  test_chromakey.py  test_cleanup.py  test_config.py  test_contour.py  test_docs_coverage.py  test_evaluation.py  test_evaluation_runner_agent_mode.py  test_extractor.py  test_grid.py  test_ingest.py  test_layout_and_qa.py  test_models.py  test_palette.py  test_projection.py  test_prompts.py  test_resize_integration.py  test_server_tools.py  test_tile.py  test_workflow_agents.py  test_workflow_executor.py  test_workflow_tools.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+79 files in other folders)
