[project]
name = "pixel-magic"
version = "0.1.0"
description = "AI-powered pixel art sprite generation CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "proper-pixel-art>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
pixel-magic = "pixel_magic.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixel_magic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
